Kubernetes/Network_Policies/podSelector/np-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: np
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
